# search-edeks

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: release.yaml
proto/: transform.proto
src/: filters.rs  main.rs  util.rs
